[package]
name = "vr_demo"
version = "0.1.0"
edition = "2024"

[lib]
name = "vr_demo"
path = "src/lib.rs"

[[bin]]
name = "vr_demo"
path = "src/main.rs"

[dependencies]
bevy = "0.17.3"
bevy_rapier3d = "0.32"
bevy_mod_openxr = "0.4.0"
bevy_xr_utils = "0.4.0"
bevy_mod_xr = "0.4.0"
#bevy_vr_controller = "*"
#bevy-inspector-egui = "0.35"
